--- a/crates/remote/docker-compose.yml
+++ b/crates/remote/docker-compose.yml
@@ -1,5 +1,4 @@
 # Self-hosting: set PUBLIC_BASE_URL to your public URL (e.g. https://kanban.example.com)
-# and REMOTE_SERVER_PORTS=0.0.0.0:3000:8081 so the server is reachable from other hosts.
 services:
   remote-db:
     image: postgres:16-alpine
@@ -18,34 +17,6 @@ services:
       start_period: 5s
     ports:
       - "5433:5432"
-
-  azurite:
-    image: mcr.microsoft.com/azure-storage/azurite:latest
-    command: "azurite-blob --blobHost 0.0.0.0 --blobPort 10000 --loose --skipApiVersionCheck"
-    ports:
-      - "10000:10000"
-    volumes:
-      - azurite-data:/data
-    healthcheck:
-      test: nc 127.0.0.1 10000 -z
-      interval: 1s
-      retries: 30
-
-  azurite-init:
-    image: mcr.microsoft.com/azure-cli:latest
-    depends_on:
-      azurite:
-        condition: service_healthy
-    environment:
-      AZURE_STORAGE_CONNECTION_STRING: "DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://azurite:10000/devstoreaccount1;"
-    entrypoint: /bin/sh
-    command:
-      - -c
-      - |
-        set -e
-        az storage container create --name issue-attachments 2>/dev/null || true
-        az storage cors add --services b --methods GET PUT POST DELETE OPTIONS --origins '*' --allowed-headers '*' --exposed-headers '*' --max-age 3600
-        echo "Azurite CORS configured"
 
   electric:
     image: electricsql/electric:1.3.3
@@ -77,13 +48,9 @@ services:
         POSTHOG_API_KEY: ${POSTHOG_API_KEY:-}
         POSTHOG_API_ENDPOINT: ${POSTHOG_API_ENDPOINT:-}
         SENTRY_DSN_REMOTE: ${SENTRY_DSN_REMOTE:-}
-      ssh:
-        - default
     depends_on:
       remote-db:
         condition: service_healthy
-      azurite-init:
-        condition: service_completed_successfully
     environment:
       RUST_LOG: info,remote=info
 
@@ -115,14 +82,14 @@ services:
       STRIPE_WEBHOOK_SECRET: ${STRIPE_WEBHOOK_SECRET:-}
       STRIPE_FREE_SEAT_LIMIT: ${STRIPE_FREE_SEAT_LIMIT:-1}
 
-      AZURE_STORAGE_ACCOUNT_NAME: ${AZURE_STORAGE_ACCOUNT_NAME:-devstoreaccount1}
-      AZURE_STORAGE_ACCOUNT_KEY: ${AZURE_STORAGE_ACCOUNT_KEY:-Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==}
+      AZURE_STORAGE_ACCOUNT_NAME: ${AZURE_STORAGE_ACCOUNT_NAME:-}
+      AZURE_STORAGE_ACCOUNT_KEY: ${AZURE_STORAGE_ACCOUNT_KEY:-}
       AZURE_STORAGE_CONTAINER_NAME: ${AZURE_STORAGE_CONTAINER_NAME:-issue-attachments}
-      AZURE_STORAGE_ENDPOINT_URL: ${AZURE_STORAGE_ENDPOINT_URL:-http://azurite:10000/devstoreaccount1}
-      AZURE_STORAGE_PUBLIC_ENDPOINT_URL: ${AZURE_STORAGE_PUBLIC_ENDPOINT_URL:-http://localhost:10000/devstoreaccount1}
+      AZURE_STORAGE_ENDPOINT_URL: ${AZURE_STORAGE_ENDPOINT_URL:-}
+      AZURE_STORAGE_PUBLIC_ENDPOINT_URL: ${AZURE_STORAGE_PUBLIC_ENDPOINT_URL:-}
 
     ports:
-      - "${REMOTE_SERVER_PORTS:-127.0.0.1:3000:8081}"
+      - "8081:8081"
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://127.0.0.1:8081/v1/health"]
@@ -134,4 +101,3 @@ services:
 volumes:
   remote-db-data:
   electric-data:
-  azurite-data:
