--- a/dc.yml
+++ b/dc.yml
@@ -1,19 +1,4 @@
 services:
-  caddy:
-    image: caddy:2-alpine
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    environment:
-      DOMAIN: ${DOMAIN}
-    volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile
-      - caddy_data:/data
-      - caddy_config:/config
-    depends_on:
-      - remote-server
-
   remote-db:
     image: postgres:16-alpine
     command: ["postgres", "-c", "wal_level=logical"]
@@ -54,7 +39,7 @@ services:
 
   remote-server:
     build:
-      context: ../..
+      context: .
       dockerfile: crates/remote/Dockerfile
     restart: unless-stopped
     depends_on:
@@ -83,6 +68,3 @@ services:
 volumes:
   remote-db-data:
   electric-data:
-  caddy_data:
-  caddy_config:
-
